Secondary button for navigation in db login.
Some unit tests for login error handling.